bpk-lib/crates/macbat/macros/tests/trybuild_negative/error_unmatched_brace.stderr
error: unmatched `}` in `#[error]` format string
 --> tests/trybuild_negative/error_unmatched_brace.rs:4:13
  |
4 |     #[error("bad }")]
  |             ^^^^^^^
